full-moon/tests/roblox_cases/pass/types_generic_declaration/source.lua
--!strict
type Foo<T, U> = (T...) -> U...
type Bar<U, T...> = nil
type Function<Args... = ...any, Return... = ()> = (Args...) -> Return...
type Baz<U = string, T... = (string, number)> = nil
