full-moon/tests/roblox_cases/fail/parser/generic_declare_packs_last/source.lua
type Bar<T..., U> = nil